# rust-ai-generate-crud

./: Cargo.toml  Dockerfile  api-test.http  example.env  readme.md
src/: main.rs
src/domain/: repository.rs  todo.rs
src/infrastructure/: mongo.rs
src/routes/: handlers.rs  routes.rs
