[package]
name = "rust-gen-crud"
version = "0.1.0"
edition = "2021"

# to Reduce the size of release binary.
# Reduced from 22M to 6.8M (more than 1/3 the original size)
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
async-std = "1.9"
tokio = { version = "1", features = ["full"] }
mongodb = "2.0"
bson = "2.0"
async-trait = "0.1.48"
serde = "1.0"
serde_json = "1.0"
warp = "0.3.6"
env_logger = "0.10.0"
libc = "0.2"  # Ensure that you use the correct version.
dotenvy = "0"       # for environment properties

# logging
log = "0"